test/static/wrong/duplicate3b.kk.out
test/static/wrong/duplicate3b.kk(3,13): error: Constructor static/wrong/duplicate3b/Dup1 is already defined at (2,13)