test/static/wrong/duplicate3b.kk
// duplicate constructor
type dup1 { DUP1(:int) }
type dup2 { Dup1(:int) }
